@@ -38,7 +38,7 @@ import java.util.concurrent.TimeUnit;
 @State(Scope.Thread)
 @Warmup(iterations = 5, time = 1)
 @Measurement(iterations = 5, time = 1)
-@Fork(value = 2)
+@Fork(value = 2, jvmArgsAppend = "--enable-preview")
 public class MonotonicBigListBenchmark {
 
     private static final int SIZE = 100_000;
